[package]
name = "wasm-everything"
version = "0.1.0"
authors = ["lightsing <light.tsing@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
log = "0.4"
once_cell = "1.7"
pretty_env_logger = "0.4"
serde = { version = "1.0" }
bincode = "1.3"
wasmer = "1.0"
we-logger = { path = "we-logger" }
tokio = { version = "1.4", features = ["rt-multi-thread", "sync", "macros"] }

[workspace]
members = [
    "rt-interface",
    "we-logger",
    "examples/hello"
]