[package]
name = "we-logger"
version = "0.1.0"
authors = ["lightsing <light.tsing@gmail.com>"]
edition = "2018"

[lib]
name = "we_logger"
crate-type = ["rlib"]

[dependencies]
log = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }