[package]
name = "we-logger"
version = "0.1.0"
authors = ["lightsing <light.tsing@gmail.com>"]
edition = "2018"

[lib]
name = "we_logger"
crate-type = ["rlib"]

[features]
logger = ["bincode"]

[dependencies]
log = "0.4"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
# serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
bincode = { version = "1.3", optional = true }