[package]
name = "we-rt"
version = "0.1.0"
authors = ["lightsing <light.tsing@gmail.com>"]
edition = "2018"

[lib]
name = "we_rt"
crate-type = ["rlib"]

[dependencies]
log = { version = "0.4", features = ["serde"] }
once_cell = "1.7"
we-logger = { path = "../we-logger", features = ["logger"] }
serde = { version = "1.0", default-features = false, features = ["alloc"] }
# serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
bincode = "1.3"
