[package]
name = "hello"
version = "0.1.0"
authors = ["lightsing <light.tsing@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4"
rt-interface = { path = "../../rt-interface" }
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true